--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -77,11 +77,11 @@ spec:
           livenessProbe:
             httpGet:
               path: /
-              port: http
+              port: api
           readinessProbe:
             httpGet:
               path: /
-              port: http
+              port: api
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
