--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,6 +1,7 @@
 {{- $fullName := include "boundary-chart.fullname" . }}
 {{- $labels := include "boundary-chart.labels" . }}
 {{- $selectorLabels := include "boundary-chart.selectorLabels" . }}
+{{- $publicPort := .Values.publicPort }}
 {{- range $index, $service := .Values.service }}
 ---
 apiVersion: v1
@@ -17,7 +18,7 @@ spec:
     - port: {{ .number }}
       targetPort: {{ .name }}
       {{- if eq $type "NodePort" }}
-      nodePort: 30202
+      nodePort: {{ default 30202 $publicPort }}
       {{- end }}
       protocol: TCP
       name: {{ .name }}
