--- a/charts/boundary-chart/templates/service.yaml
+++ b/charts/boundary-chart/templates/service.yaml
@@ -36,3 +36,27 @@ spec:
   selector:
     {{- $selectorLabels | nindent 4 }}
 {{- end }}
+
+---
+
+{{ if .Values.metrics.enabled }}
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ $fullName }}-metrics
+  labels:
+    {{- $labels | nindent 4 }}
+  annotations:
+    prometheus.io/path: {{ .Values.metrics.path }}
+    prometheus.io/port: {{ .Values.metrics.port | quote }}
+    prometheus.io/scrape: "true"
+spec:
+  type: ClusterIP
+  ports:
+    - port: {{ .Values.metrics.port }}
+      targetPort: {{ .Values.metrics.name }}
+      protocol: TCP
+      name: {{ .Values.metrics.name }}
+  selector:
+    {{- $selectorLabels | nindent 4 }}
+{{- end }}
