--- a/charts/boundary-chart/values.yaml
+++ b/charts/boundary-chart/values.yaml
@@ -4,6 +4,12 @@
 
 replicaCount: 1
 
+initialise_boundary: 
+  # Whether to create boundary-init container to run database migration
+  # This is useful when it's required to avoid running database migration on pod restart
+  # Post upgrade re-deploy with `false`
+  enabled: true
+
 image:
   repository: hashicorp/boundary
   pullPolicy: IfNotPresent
