fix: renaming variable

--- a/charts/boundary-chart/templates/deployment.yaml
+++ b/charts/boundary-chart/templates/deployment.yaml
@@ -59,7 +59,7 @@ spec:
       serviceAccountName: {{ include "boundary-chart.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
-      {{- if .Values.initialise_boundary.enabled }}
+      {{- if .Values.initialiseBoundary.enabled }}
       initContainers:
         - name: boundary-init
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
