--- a/charts/boundary-chart/templates/configmap.yaml
+++ b/charts/boundary-chart/templates/configmap.yaml
@@ -58,8 +58,8 @@ data:
         name = {{ $sink.name | quote }}
         description = {{ $sink.description | quote  }}
         event_types = {{ $sink.event_types }}
-        {{- if (and (hasKey $sink "evenevent_source_url")) }}
-        evenevent_source_url = {{ $sink.evenevent_source_url }}
+        {{- if (and (hasKey $sink "event_source_url")) }}
+        event_source_url = {{ $sink.event_source_url }}
         {{- end }}
         {{- if (and (hasKey $sink "allow_filters")) }}
         allow_filters = [
@@ -180,8 +180,8 @@ data:
         name = {{ $sink.name | quote }}
         description = {{ $sink.description | quote  }}
         event_types = {{ $sink.event_types }}
-        {{- if (and (hasKey $sink "evenevent_source_url")) }}
-        evenevent_source_url = {{ $sink.evenevent_source_url }}
+        {{- if (and (hasKey $sink "event_source_url")) }}
+        event_source_url = {{ $sink.event_source_url }}
         {{- end }}
         {{- if (and (hasKey $sink "allow_filters")) }}
         allow_filters = [
