--- a/charts/boundary-chart/templates/deployment.yaml
+++ b/charts/boundary-chart/templates/deployment.yaml
@@ -104,6 +104,9 @@ spec:
             - name: boundary-config
               mountPath: /boundary
               readOnly: true
+          {{- if .Values.volumeMounts }}
+            {{- toYaml .Values.volumeMounts | nindent 12}}
+          {{- end }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
@@ -135,6 +138,9 @@ spec:
         - name: boundary-config
           configMap:
             name: boundary-config
+      {{- if .Values.volumes }}
+        {{- toYaml .Values.volumes | nindent 8}}
+      {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
