--- a/charts/boundary-chart/values.yaml
+++ b/charts/boundary-chart/values.yaml
@@ -69,6 +69,17 @@ events:
     #     secret: "redact"
     #     # Specifies the filter operation to apply to fields that are classified as sensitive e.g "encrypt", "hmac-sha256", "redact"
     #     sensitive: "redact"
+    # - name: "audit"
+    #   type: "stderr"
+    #   description: "audit stderr sink"
+    #   event_types: "[\"audit\"]"
+    #   format: "cloudevents-json"
+    #   file:
+    #     file_name: "audit.log"
+    #     path: "/boundary/event_logs"
+    #     rotate_duration: "24h"
+    #     rotate_max_files: 5
+    #     rotate_bytes: 25165824
 
 vault:
   enabled: false
@@ -174,6 +185,14 @@ autoscaling:
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
+
+volumes: null
+  # - name: event-logs
+  #   emptyDir: {}
+
+volumeMounts: null
+  # - mountPath: /boundary/event_logs
+  #   name: event-logs
 
 nodeSelector: {}
 
