--- a/charts/boundary-chart/values.yaml
+++ b/charts/boundary-chart/values.yaml
@@ -4,7 +4,7 @@
 
 replicaCount: 1
 
-initialiseBoundary: 
+initialiseBoundary:
   # Whether to create boundary-init container to run database migration
   # This is useful when it's required to avoid running database migration on pod restart
   # Post upgrade re-deploy with `false`
@@ -38,6 +38,17 @@ aead:
     recovery: Ivj8Si8UQBp+Zm2lLbUDTxOGikE8rSo6QihCjWSTXqY=
     worker-auth: 8Aj2j2JpFmY1WdjKcmETyYwUi7njP74MLVXWNov4rZ8=
 
+gcpckms:
+  enabled: false
+  # gcpckms Documented Here:
+  # https://developer.hashicorp.com/boundary/docs/configuration/kms/gcpckms
+  purpose: root
+  credentials: /usr/boundary/boundary-project-user-creds.json
+  project: boundary-project
+  region: global
+  key_ring: boundary-keyring
+  crypto_key: boundary-key
+
 events:
   # Specifies whether to enable events stanza
   enabled: false
@@ -50,7 +61,8 @@ events:
   sysevents: false
 
   # Specifies sink configs
-  sink: {}
+  sink:
+    {}
     # - name: "audit"
     #   # specifies the type of sink. Can be stderr or file
     #   type: "stderr"
@@ -123,10 +135,12 @@ podSecrets:
   - secretName: vault-secret
     keyName: VAULT_TOKEN
 
-podSecurityContext: {}
+podSecurityContext:
+  {}
   # fsGroup: 2000
 
-securityContext: {}
+securityContext:
+  {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -153,7 +167,8 @@ service:
 ingress:
   enabled: true
   className: nginx
-  annotations: {}
+  annotations:
+    {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
@@ -167,7 +182,8 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources: {}
+resources:
+  {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -186,11 +202,13 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-volumes: null
+volumes:
+  null
   # - name: event-logs
   #   emptyDir: {}
 
-volumeMounts: null
+volumeMounts:
+  null
   # - mountPath: /boundary/event_logs
   #   name: event-logs
 
