--- a/charts/boundary-chart/values.yaml
+++ b/charts/boundary-chart/values.yaml
@@ -61,8 +61,7 @@ events:
   sysevents: false
 
   # Specifies sink configs
-  sink:
-    {}
+  sink: {}
     # - name: "audit"
     #   # specifies the type of sink. Can be stderr or file
     #   type: "stderr"
@@ -135,12 +134,10 @@ podSecrets:
   - secretName: vault-secret
     keyName: VAULT_TOKEN
 
-podSecurityContext:
-  {}
+podSecurityContext: {}
   # fsGroup: 2000
 
-securityContext:
-  {}
+securityContext: {}
   # capabilities:
   #   drop:
   #   - ALL
@@ -167,8 +164,7 @@ service:
 ingress:
   enabled: true
   className: nginx
-  annotations:
-    {}
+  annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
@@ -182,8 +178,7 @@ ingress:
   #    hosts:
   #      - chart-example.local
 
-resources:
-  {}
+resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
@@ -202,13 +197,11 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # targetMemoryUtilizationPercentage: 80
 
-volumes:
-  null
+volumes: null
   # - name: event-logs
   #   emptyDir: {}
 
-volumeMounts:
-  null
+volumeMounts: null
   # - mountPath: /boundary/event_logs
   #   name: event-logs
 
