--- a/charts/boundary-chart/templates/deployment.yaml
+++ b/charts/boundary-chart/templates/deployment.yaml
@@ -82,6 +82,9 @@ spec:
             - name: boundary-config
               mountPath: /boundary
               readOnly: true
+          {{- if .Values.volumeMounts }}
+            {{- toYaml .Values.volumeMounts | nindent 12}}
+          {{- end }}
       {{- end }}
       containers:
         - name: {{ .Chart.Name }}
