--- a/charts/boundary-chart/templates/deployment.yaml
+++ b/charts/boundary-chart/templates/deployment.yaml
@@ -134,6 +134,9 @@ spec:
               port: api
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+        {{- if .Values.extraContainers }}
+        {{ toYaml .Values.extraContainers | nindent 8}}
+        {{- end }}
       volumes:
         - name: boundary-config
           configMap:
